<resources>
    <string name="app_name">Transition Animation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Firebase</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="firebase">Firebase</string>
</resources>
