<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Firebase"
        android:textSize="36dp" />


    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:orientation="vertical">

        <!-- Registration -->

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.5dp"
                android:text="@string/fullname"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.5dp"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvRPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.5dp"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etRPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:password="true"
                android:singleLine="true" />

        </LinearLayout>


        <!-- Login -->

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.5dp"
                android:text="@string/username"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1.5dp"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:password="true"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llView"
        android:layout_margin="30dp"
        android:background="#FFA611"
        android:text="@string/next"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llView"
        android:layout_margin="30dp"
        android:background="#FFA611"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:visibility="gone" />


</RelativeLayout>